--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=equipamentosteste.database.windows.net; Initial Catalog=equipamentos_teste; User Id=equipamentos_admin; Password=Senai@132"
+    "Default": "Data Source=servidordbgrupo-rededev.database.windows.net; Initial Catalog=BancoDados-RedeDev; User Id=usuariodb; Password=Senai@132"
   }
 }
